# flask_demo

./: .gitignore  app.py  gunicorn.conf.py  pyproject.toml  requirements.txt  start.sh
app/: __init__.py
app/configs/: __init__.py  dev_config.py  prod_config.py  test_config.py
app/extensions/: __init__.py  init_sqlalchemy.py
app/view/: __init__.py
app/view/index/: __init__.py  index.py
application/: __init__.py
application/common/utils/: __init__.py  db_dao.py  encrypt.py  load_yaml.py
application/configs/: __init__.py  config.py  dev_config.py  prod_config.py  test_config.py
application/exception/: __init__.py  api_exception.py  err_code.py
application/extensions/: __init__.py  init_dask.py  init_dotenv.py  init_logger.py  init_loguru.py  init_sqlalchemy.py
application/middleware/: __init__.py  exception_middleware.py  record_request_middleware.py  record_response_middleware.py  update_care_modle_status.py
application/responses/: base_response.py
application/view/: __init__.py
application/view/index/: index.py
application/view/proc/: __init__.py  index_quot.py
celery_app/tasks/: __init__.py
comp/: __init__.py
deploy/: Dockerfile  supervisor.conf
docker/: Dockerfile  docker-compose.yml
etc/: dev.yaml  log.yaml  loguru_log.yaml  prod.yaml  test.yaml
models/: __init__.py  app_python_state.py
